feat: Error page (SCRUM-131)

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -23,7 +23,7 @@
   width: 100%;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
+  color: var(--color-text);
   background-color: var(--color-primary);
 
   font-synthesis: none;
