--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,9 +11,13 @@
   /* text colors */
   --color-text: #212529;
   --color-text-clickable: #212529;
-  --color-text-hover: #495057;
+  --color-text-hover: #6c757d;
   --color-text-active: #343a40;
   --color-text-disabled: #adb5bd;
+}
+
+::selection {
+  background: var(--color-tertiary);
 }
 
 :root {
@@ -32,13 +36,18 @@
     -moz-osx-font-smoothing: grayscale;
 }
 
-a {
-  font-weight: 500;
-  color: var(--color-text-clickable);
-  text-decoration: inherit;
+input:-webkit-autofill,
+input:-webkit-autofill:focus {
+    transition: background-color 600000s 0s, color 600000s 0s;
 }
-a:hover {
-  color: var(--color-text-hover);
+input[data-autocompleted] {
+    background-color: transparent !important;
+}
+
+a {
+  /*font-weight: 500;
+  color: var(--color-text-clickable);
+  text-decoration: inherit;*/
 }
 
 body {
@@ -55,22 +64,22 @@ h1 {
 }
 
 button {
-    border-radius: 8px;
+    /*border-radius: 8px;
     border: 1px solid transparent;
     padding: 0.6em 1.2em;
     font-size: 1em;
     font-weight: 500;
     font-family: inherit;
-    background-color: #1a1a1a;
+    background-color: var(--color-quaternary);
     cursor: pointer;
-    transition: border-color 0.25s;
+    transition: border-color 0.25s;*/
 }
 button:hover {
-    border-color: #646cff;
+    /*border-color: #646cff;*/
 }
 button:focus,
 button:focus-visible {
-    outline: 4px auto -webkit-focus-ring-color;
+    /*outline: 4px auto -webkit-focus-ring-color;*/
 }
 
 @media (prefers-color-scheme: light) {
